--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react:start": "react-scripts start",
     "react:build": "react-scripts build",
     "test": "react-scripts test",
+    "test:e2e": "mocha --timeout 10000 ./tests/*.spec.js",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/* && prettier --check ./src/*",
     "clean": "rm -rf ./build && rm -rf ./dist",
@@ -58,8 +59,11 @@
     "wait-on": "^5.2.0"
   },
   "devDependencies": {
+    "@types/mocha": "2.2.43",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "electron": "^9.2.0",
     "electron-builder": "^22.8.0",
     "eslint": "^6.6.0",
@@ -69,7 +73,9 @@
     "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.1",
-    "eslint-plugin-react-hooks": "^4.0.0"
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "mocha": "^8.1.1",
+    "spectron": "^11.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
